# localmelo

./: .gitignore  .pre-commit-config.yaml  README.md  README.zh-CN.md  __init__.py  __main__.py  pyproject.toml
checker/: __init__.py
core/: __init__.py  llm.py
core/chat/: __init__.py
core/gateway/: __init__.py
docs/: architecture.html  architecture.zh-CN.html  index.html  index.zh-CN.html  quickstart.html  quickstart.md  quickstart.zh-CN.html  updates.html  updates.zh-CN.html
docs/assets/: site.css  site.js
executor/: __init__.py
melo/: __init__.py  schema.py
melo/agent/: __init__.py  _chat.py  agent.py  chat.py
melo/checker/: __init__.py  checker.py  payloads.py  validators.py
melo/contracts/: __init__.py  providers.py
melo/executor/: __init__.py  builtins.py  executor.py  models.py  policy.py
melo/memory/: __init__.py  _sqlite.py  coordinator.py
melo/sleep/: __init__.py
memory/history/: __init__.py
memory/long/: __init__.py
memory/short/: __init__.py
memory/tools/: __init__.py
support/: __init__.py  config.py  onboard.py  onboard_probe.py
support/backends/: __init__.py  base.py  openai_compat.py  registry.py  tokenization.py
support/gateway/: __init__.py  _test_webapp.py  channel.py  daemon.py  playground.py  session.py  webapp.py
support/melo_serving/: __init__.py  manifest.py
support/models/: __init__.py
support/providers/: __init__.py
support/serving/: __init__.py  _mlc_path.py  model_config.py  server.py
tests/: test_agent_loop.py  test_checker.py  test_checker_v02.py  test_executor.py  test_gateway.py  test_integration.py  test_main_cli.py  test_memory.py  test_support.py
tests/agent/: test_attempts.py  test_loop.py
tests/backends/: test_api_backends.py  test_config_delegation.py  test_mlc_backend.py  test_onboard_probe.py  test_registry.py  test_tokenization.py
tests/checker/: test_validators.py
tests/cli/: test_config.py  test_main.py  (+1 more)
(+41 files in other folders)
